themes/lucid/layout/AccordionContainer.css
/* Accordion */

.lucid .dijitAccordionContainer {
	border: medium none;
	border-bottom: 1px solid #C0CCDF;
}

.lucid .dijitAccordionInnerContainer {
	background-color: #f5f5f5;
	border-color:#C0CCDF #C0CCDF transparent;
	border-style:solid;
	border-width:1px;
}

/* 
 *  border transparent is not supported in IE6 
 */
.dj_ie6 .lucid .dijitAccordionInnerContainer {
	border-bottom: 1px solid #f5f5f5;
}

.lucid .dijitAccordionContainer .dijitAccordionInnerContainerHover,
.lucid .dijitAccordionContainer .dijitAccordionInnerContainerSelectedActive {
	background-color:#ABD6FF;
	border:1px solid #769DC0;
}

.dj_ie6 .lucid .dijitAccordionInnerContainerHover {
	background-image: none;
}

.lucid .dijitAccordionInnerContainerSelected {
	background-color:#E3F2FF;
	border:1px solid #BFD6EB;
	padding: 0px 0px 2px 0px;
}

.lucid .dijitAccordionTitle {
	background-color: #f5f5f5;
	background-image: url("images/accordion_back.png");
	background-position:center top;
	padding: 6px 7px 3px 10px;
	outline:none;
}

.dj_ie6 .lucid .dijitAccordionTitle {
	background-image: none;
}


.lucid .dijitAccordionTitleHover  {
	background-color:#ABD6FF;
}

.dj_ie6 .lucid .dijitAccordionTitleHover {
	background-image: none;
}

.lucid .dijitAccordionContainer .dijitAccordionTitleActive {
	background-image: url("images/accordion_down.png");
	background-color:#7dbefa;
	border-color: #769dc0;
}

.dj_ie6 .lucid .dijitAccordionTitleActive {
	background-image: none;
}

.lucid .dijitAccordionFocused,
.lucid .dijitAccordionTitleFocused{
	text-decoration:none;
}

.lucid .dijitAccordionTitleSelected  {
	background-color:#E3F2FF;
	background-image:url("images/accordion_back.png");
	background-position:center top;
	padding: 6px 7px 3px 10px;
	cursor: default;
}

.dj_ie6 .lucid .dijitAccordionTitleSelected {
	background-image: none;
}

.lucid .dijitAccordionTitleSelectedHover,
.lucid .dijitAccordionContainer .dijitAccordionTitleSelectedActive{
	background-color:#ABD6FF;
	background-image:url("images/accordion_back.png");
}

.dj_ie6 .lucid .dijitAccordionTitleSelectedHover{
	background-image: none;
}

.lucid .dijitAccordionInnerContainerHover .dijitAccordionTitleSelected,
.lucid .dijitAccordionInnerContainerActive .dijitAccordionTitleSelected{
	background-color:#ABD6FF;
}

.lucid .dijitAccordionContainer .dijitAccordionContainer-child {
	background-color:#fafafa;
	/*
	 * border style need to be !important to override the style "border:medium none !important"
	 * in class ".dijitTabPane, .dijitStackContainer-child, .dijitAccordionContainer-child"
	 */
	border:1px solid #BFD6EB !important;
	margin: 0px 2px;
	padding: 9px;
}

.lucid .dijitAccordionContainer .dijitAccordionInnerContainerHover .dijitAccordionContainer-child, 
.lucid .dijitAccordionContainer .dijitAccordionInnerContainerActive .dijitAccordionContainer-child {
	background-color:#ffffff;
	border:1px solid #769DC0 !important;
}

.lucid .dijitAccordionTitleFocused {
	outline:none;
}

