!AccordionContainer update from Jason, in particular separating each pane with a small margin, unlike the other themes where the panes abut each other.  I'm suspicious there's an off-by-one pixel problem, where an !AccordionContainer inside another layout widget is 1px too short, but if that bug exists it's not really noticeable to me.
Refs #10527.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@21427 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/lucid/layout/AccordionContainer.css
+++ b/themes/lucid/layout/AccordionContainer.css
@@ -1,120 +1,128 @@
 /* Accordion */
 
 .lucid .dijitAccordionContainer {
-	border: medium none;
-	border-bottom: 1px solid #C0CCDF;
+	border:none;
 }
-
 .lucid .dijitAccordionInnerContainer {
-	background-color: #f5f5f5;
-	border-color:#C0CCDF #C0CCDF transparent;
-	border-style:solid;
-	border-width:1px;
+	background-color: #d4ebff;
+	border:solid 1px #b5bcc7;
+	margin-bottom:1px;
+	-webkit-transition-property:background-color;
+ 	-webkit-transition-duration:.3s;
+	-webkit-transition-timing-function:linear;
+}
+.lucid .dijitAccordionTitle {
+	background-color: #eeeeee;
+	background-image: url("images/accordion_back.png");
+	background-repeat:repeat-x;
+	padding: 5px 7px 2px 7px;
+	outline:none;
+	min-height:17px;
+	color:#3d3d3d;
+	-webkit-transition-property:background-color, border;
+ 	-webkit-transition-duration:.35s;
+	-webkit-transition-timing-function:linear;
+}
+.dj_ie6 .lucid .dijitAccordionTitle {
+	background-image: none;
+}
+.lucid .dijitAccordionContainer .dijitAccordionContainer-child {
+	background-color:#fff;
+	/*
+	 * border style need to be !important to override the style "border:medium none !important"
+	 * in class ".dijitTabPane, .dijitStackContainer-child, .dijitAccordionContainer-child"
+	 */
+	border:1px solid #92bce1 !important;
+	margin: 0px 2px 2px;
+	padding: 9px;
 }
 
-/* 
- *  border transparent is not supported in IE6 
- */
-.dj_ie6 .lucid .dijitAccordionInnerContainer {
-	border-bottom: 1px solid #f5f5f5;
-}
+/* Hover State */
 
+.lucid .dijitAccordionTitleHover {
+	background-color:#9dcfff;
+	color:#000;
+	-webkit-transition-property:background-color, border;
+ 	-webkit-transition-duration:.3s;
+	-webkit-transition-timing-function:linear;
+}
+.dj_ie6 .lucid .dijitAccordionTitleHover {
+	background-image: none;
+}
 .lucid .dijitAccordionContainer .dijitAccordionInnerContainerHover,
 .lucid .dijitAccordionContainer .dijitAccordionInnerContainerSelectedActive {
-	background-color:#ABD6FF;
+	background-color:#b7dcff;
 	border:1px solid #769DC0;
+	-webkit-transition-property:background-color;
+ 	-webkit-transition-duration:.3s;
+	-webkit-transition-timing-function:linear;
 }
-
+.lucid .dijitAccordionContainer .dijitAccordionInnerContainerHover .dijitAccordionContainer-child,
+.lucid .dijitAccordionContainer .dijitAccordionInnerContainerActive .dijitAccordionContainer-child {
+	background-color:#ffffff;
+	border:1px solid #769DC0 !important;
+	-webkit-box-shadow:inset 0px 0px 3px rgba(0, 0, 0, .35);
+	-moz-box-shadow:inset 0px 0px 3px rgba(0, 0, 0, .35);
+}
 .dj_ie6 .lucid .dijitAccordionInnerContainerHover {
 	background-image: none;
 }
 
-.lucid .dijitAccordionInnerContainerSelected {
-	background-color:#E3F2FF;
-	border:1px solid #BFD6EB;
-	padding: 0px 0px 2px 0px;
+/* Hover State End*/
+/* Active State*/
+
+.lucid .dijitAccordionContainer .dijitAccordionInnerContainerActive {
+	border-color:#769DC0;
 }
-
-.lucid .dijitAccordionTitle {
-	background-color: #f5f5f5;
-	background-image: url("images/accordion_back.png");
-	background-position:center top;
-	padding: 6px 7px 3px 10px;
-	outline:none;
-}
-
-.dj_ie6 .lucid .dijitAccordionTitle {
-	background-image: none;
-}
-
-
-.lucid .dijitAccordionTitleHover  {
-	background-color:#ABD6FF;
-}
-
-.dj_ie6 .lucid .dijitAccordionTitleHover {
-	background-image: none;
-}
-
 .lucid .dijitAccordionContainer .dijitAccordionTitleActive {
 	background-image: url("images/accordion_down.png");
+	background-repeat:repeat-x;
 	background-color:#7dbefa;
-	border-color: #769dc0;
 }
-
 .dj_ie6 .lucid .dijitAccordionTitleActive {
 	background-image: none;
 }
 
-.lucid .dijitAccordionFocused,
-.lucid .dijitAccordionTitleFocused{
-	text-decoration:none;
-}
+/* Active State End*/
+/* Selected state */ 
+.lucid .dijitAccordionInnerContainerSelected {
+	border-color:#92bce1;
 
-.lucid .dijitAccordionTitleSelected  {
-	background-color:#E3F2FF;
+}
+.lucid .dijitAccordionTitleSelected {
+	background-color:#cde8ff;
 	background-image:url("images/accordion_back.png");
 	background-position:center top;
-	padding: 6px 7px 3px 10px;
+	padding: 5px 7px 2px 7px;
+	color:#000;
 	cursor: default;
+	-webkit-transition-property:background-color;
+ 	-webkit-transition-duration:.3s;
+	-webkit-transition-timing-function:linear;
 }
-
 .dj_ie6 .lucid .dijitAccordionTitleSelected {
 	background-image: none;
 }
-
+.lucid .dijitAccordionInnerContainerHover .dijitAccordionTitleSelected,
+.lucid .dijitAccordionInnerContainerActive .dijitAccordionTitleSelected {
+	background-color:#ABD6FF;
+}
 .lucid .dijitAccordionTitleSelectedHover,
 .lucid .dijitAccordionContainer .dijitAccordionTitleSelectedActive{
 	background-color:#ABD6FF;
 	background-image:url("images/accordion_back.png");
 }
-
-.dj_ie6 .lucid .dijitAccordionTitleSelectedHover{
+.dj_ie6 .lucid .dijitAccordionTitleSelectedHover {
 	background-image: none;
 }
 
-.lucid .dijitAccordionInnerContainerHover .dijitAccordionTitleSelected,
-.lucid .dijitAccordionInnerContainerActive .dijitAccordionTitleSelected{
-	background-color:#ABD6FF;
-}
+/* Selected State End*/  
+/* Focused State */
 
-.lucid .dijitAccordionContainer .dijitAccordionContainer-child {
-	background-color:#fafafa;
-	/*
-	 * border style need to be !important to override the style "border:medium none !important"
-	 * in class ".dijitTabPane, .dijitStackContainer-child, .dijitAccordionContainer-child"
-	 */
-	border:1px solid #BFD6EB !important;
-	margin: 0px 2px;
-	padding: 9px;
+.lucid .dijitAccordionFocused, .lucid .dijitAccordionTitleFocused {
+	text-decoration:none;
 }
-
-.lucid .dijitAccordionContainer .dijitAccordionInnerContainerHover .dijitAccordionContainer-child, 
-.lucid .dijitAccordionContainer .dijitAccordionInnerContainerActive .dijitAccordionContainer-child {
-	background-color:#ffffff;
-	border:1px solid #769DC0 !important;
-}
-
 .lucid .dijitAccordionTitleFocused {
 	outline:none;
 }
+/* Focused State End*/
